--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,15 @@ android {
         versionCode 1
         versionName "1.0"
     }
+    sourceSets {
+        main {
+            res.srcDirs =
+            [
+                    '/src/main/res/_A0_seller',
+                    '/src/main/res'
+            ]
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -38,22 +47,44 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    // Support
     compile 'com.android.support:appcompat-v7:24.2.0'
+    compile 'com.android.support:support-v4:24.2.0'
     compile 'com.android.support:design:24.2.0'
+
+    // Barcode Reader
     compile 'com.embarkmobile:zxing-android-minimal:2.0.0@aar'
     compile 'com.embarkmobile:zxing-android-integration:2.0.0@aar'
     compile 'com.google.zxing:core:3.0.1'
+
+    // Google Playservice
     compile 'com.google.android.gms:play-services-location:9.6.1'
     compile 'com.google.android.gms:play-services-maps:9.6.1'
     compile 'com.google.android.gms:play-services-ads:9.6.1'
     compile 'com.google.maps.android:android-maps-utils:0.4.+'
-    compile 'com.squareup:otto:1.3.8'
-    compile 'com.squareup.okhttp3:okhttp:3.4.1'
-    compile 'com.android.support:support-v4:24.2.0'
 
+    // Otto
+    compile 'com.squareup:otto:1.3.8'
+
+    // Ok http3.4
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+
+    // GSON
+    compile 'com.google.code.gson:gson:2.3.1'
+
+    // Service provider retrofit 2.1
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+
+    // Background asynchonous task helper
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
+
+    // Graph
     compile 'com.github.PhilJay:MPAndroidChart-Realm:v1.1.0@aar'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.0-beta1'
 
+    // Firebase
     compile 'com.google.firebase:firebase-core:9.6.1'
     compile 'com.google.firebase:firebase-messaging:9.6.1'
 }
