--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,7 @@ android {
             res.srcDirs =
             [
                     '/src/main/res/_A0_seller',
+                    '/src/main/res/_A0_location',
                     '/src/main/res'
             ]
         }
@@ -26,8 +27,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-
 }
 
 
@@ -51,6 +50,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.android.support:support-v4:24.2.0'
     compile 'com.android.support:design:24.2.0'
+    compile 'com.android.support:cardview-v7:24.+'
 
     // Barcode Reader
     compile 'com.embarkmobile:zxing-android-minimal:2.0.0@aar'
