--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,10 @@ dependencies {
     compile 'com.google.android.gms:play-services-ads:9.6.1'
     compile 'com.google.maps.android:android-maps-utils:0.4.+'
 
+    // Parceler
+    compile 'org.parceler:parceler-api:1.1.6'
+    annotationProcessor 'org.parceler:parceler:1.1.6'
+
     // Otto
     compile 'com.squareup:otto:1.3.8'
 
@@ -89,3 +93,5 @@ dependencies {
     compile 'com.google.firebase:firebase-messaging:9.6.1'
 }
 apply plugin: 'com.google.gms.google-services'
+//apply plugin: 'com.android.application'
+//apply plugin: 'com.neenbedankt.android-apt'
