--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,9 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".MapsActivity" android:label="@string/title_activity_maps" />
+        <activity
+            android:name=".MapsActivity"
+            android:label="@string/title_activity_maps" />
         <activity android:name=".SimplyGraph" />
         <activity android:name=".SimplyPieChartActivity" />
         <activity android:name=".TestActivity" />
@@ -65,6 +67,7 @@
         <activity android:name=".EBusinessActivity" />
         <activity android:name=".SellerActivity" />
         <activity android:name=".LocationActivity" />
+        <activity android:name=".SellerSubActivity"></activity>
     </application>
 
 </manifest>
