--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,9 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.3'
+        classpath 'com.android.tools.build:gradle:2.2.3'
         classpath 'com.google.gms:google-services:3.0.0'
-
+        classpath 'com.android.tools.build:gradle:2.2.0-rc2'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
