--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,13 +45,6 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity
-            android:name=".MapsActivity"
-            android:label="@string/title_activity_maps" />
-        <activity android:name=".SimplyGraph" />
-        <activity android:name=".SimplyPieChartActivity" />
-        <activity android:name=".TestActivity" />
-
         <service android:name=".MyFirebaseMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
@@ -63,6 +56,12 @@
             </intent-filter>
         </service>
 
+        <activity
+            android:name=".MapsActivity"
+            android:label="@string/title_activity_maps" />
+        <activity android:name=".SimplyGraph" />
+        <activity android:name=".SimplyPieChartActivity" />
+        <activity android:name=".TestActivity" />
         <activity android:name=".UserActivity" />
         <activity android:name=".EBusinessActivity" />
         <activity android:name=".SellerActivity" />
@@ -71,6 +70,7 @@
         <activity android:name=".ShopInfoActivity" />
         <activity android:name=".LocationCaseFormActivity" />
         <activity android:name=".CanvasActivity" />
+        <activity android:name=".InvoiceInfoActivity"></activity>
     </application>
 
 </manifest>
