--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,39 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.administrator.myapplication"
-    android:versionCode="1"
-    android:versionName="1.0">
+          package="com.example.administrator.myapplication"
+          android:versionCode="1"
+          android:versionName="1.0">
 
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+   <uses-permission android:name="android.permission.CAMERA"/>
+   <uses-permission android:name="android.permission.INTERNET"/>
+   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+   <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
-    <uses-feature android:name="android.hardware.camera" />
-    <uses-feature android:name="android.hardware.camera.autofocus" />
+   <uses-feature android:name="android.hardware.camera"/>
+   <uses-feature android:name="android.hardware.camera.autofocus"/>
 
-    <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden|adjustResize">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+   <application
+       android:allowBackup="true"
+       android:icon="@mipmap/ic_launcher"
+       android:label="@string/app_name"
+       android:supportsRtl="true"
+       android:theme="@style/AppTheme">
+      <activity
+          android:name=".MainActivity"
+          android:label="@string/app_name"
+          android:theme="@style/AppTheme.NoActionBar"
+          android:windowSoftInputMode="stateHidden|adjustResize">
+         <intent-filter>
+            <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            <category android:name="android.intent.category.LAUNCHER"/>
+         </intent-filter>
+      </activity>
 
-        <!--
+      <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
              Note that the API key is linked to the encryption key used to sign the APK.
@@ -41,36 +41,41 @@
              sign the APK for publishing.
              You can define the keys for the debug and release targets in src/debug/ and src/release/.
         -->
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
+      <meta-data
+          android:name="com.google.android.geo.API_KEY"
+          android:value="@string/google_maps_key"/>
 
-        <service android:name=".MyFirebaseMessagingService">
-            <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT" />
-            </intent-filter>
-        </service>
-        <service android:name=".MyFirebaseInstanceIDService">
-            <intent-filter>
-                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
-            </intent-filter>
-        </service>
+      <service android:name=".MyFirebaseMessagingService">
+         <intent-filter>
+            <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+         </intent-filter>
+      </service>
+      <service android:name=".MyFirebaseInstanceIDService">
+         <intent-filter>
+            <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+         </intent-filter>
+      </service>
 
-        <activity
-            android:name=".MapsActivity"
-            android:label="@string/title_activity_maps" />
-        <activity android:name=".SimplyGraph" />
-        <activity android:name=".SimplyPieChartActivity" />
-        <activity android:name=".TestActivity" />
-        <activity android:name=".UserActivity" />
-        <activity android:name=".EBusinessActivity" />
-        <activity android:name=".SellerActivity" />
-        <activity android:name=".LocationActivity" />
-        <activity android:name=".SellerSubActivity" />
-        <activity android:name=".ShopInfoActivity" />
-        <activity android:name=".LocationCaseFormActivity" />
-        <activity android:name=".CanvasActivity" />
-        <activity android:name=".InvoiceInfoActivity"></activity>
-    </application>
+      <activity
+          android:name=".MapsActivity"
+          android:label="@string/title_activity_maps"/>
+      <activity android:name=".SimplyGraph"/>
+      <activity android:name=".SimplyPieChartActivity"/>
+      <activity android:name=".TestActivity"/>
+      <activity android:name=".UserActivity"/>
+      <activity android:name=".EBusinessActivity"/>
+      <activity android:name=".SellerActivity"/>
+      <activity android:name=".LocationActivity"/>
+      <activity android:name=".SellerSubActivity"/>
+      <activity android:name=".ShopInfoActivity"/>
+      <activity android:name=".LocationCaseFormActivity"/>
+      <activity android:name=".CanvasActivity"/>
+      <activity
+          android:name=".CustomScannerActivity"
+          android:screenOrientation="landscape"/>
+      <activity android:name=".InvoiceInfoActivity"/>
+      <activity android:name=".AuthenActivity">
+      </activity>
+   </application>
 
 </manifest>
