--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         applicationId "com.example.administrator.myapplication"
@@ -57,6 +57,8 @@ dependencies {
     compile 'com.android.support:support-v4:24.2.0'
     compile 'com.android.support:design:24.2.0'
     compile 'com.android.support:cardview-v7:24.+'
+
+    compile 'com.jakewharton:butterknife:6.1.0'
 
     // Barcode Reader
     //compile 'com.embarkmobile:zxing-android-minimal:2.0.0@aar'
