--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
           android:versionCode="1"
           android:versionName="1.0">
 
+
    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
    <uses-permission android:name="android.permission.CAMERA"/>
@@ -20,15 +21,14 @@
        android:icon="@mipmap/ic_launcher"
        android:label="@string/app_name"
        android:supportsRtl="true"
-       android:theme="@style/AppTheme">
+       android:theme="@style/Theme.AppCompat.Light.NoActionBar">
       <activity
           android:name=".MainActivity"
           android:label="@string/app_name"
-          android:theme="@style/AppTheme.NoActionBar"
+          android:theme="@style/ApplicationTheme"
           android:windowSoftInputMode="stateHidden|adjustResize">
          <intent-filter>
             <action android:name="android.intent.action.MAIN"/>
-
             <category android:name="android.intent.category.LAUNCHER"/>
          </intent-filter>
       </activity>
@@ -75,6 +75,8 @@
           android:screenOrientation="landscape"/>
       <activity android:name=".InvoiceInfoActivity"/>
       <activity android:name=".AuthenActivity">
+      </activity>
+      <activity android:name=".SignUpActivity">
       </activity>
    </application>
 
