--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,29 +1,29 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion 25
     buildToolsVersion '25.0.0'
 
     defaultConfig {
         applicationId "com.example.administrator.myapplication"
         minSdkVersion 19
-        targetSdkVersion 24
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
     }
     sourceSets {
         main {
             res.srcDirs =
-            [
-                '/src/main/res',
-                '/src/main/res/_R0_environment',
-                '/src/main/res/_A0_seller',
-                '/src/main/res/_A0_location',
-                '/src/main/res/_A0_shop_info',
-                '/src/main/res/_A1_invoice',
-                '/src/main/res/_A0_authen'
+                    [
+                            '/src/main/res',
+                            '/src/main/res/_R0_environment',
+                            '/src/main/res/_A0_seller',
+                            '/src/main/res/_A0_location',
+                            '/src/main/res/_A0_shop_info',
+                            '/src/main/res/_A1_invoice',
+                            '/src/main/res/_A0_authen'
 
-            ]
+                    ]
         }
     }
     buildTypes {
@@ -51,58 +51,57 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
     // Support
-    compile 'com.android.support:appcompat-v7:24.2.0'
-    compile 'com.android.support:support-v4:24.2.0'
-    compile 'com.android.support:design:24.2.0'
-    compile 'com.android.support:cardview-v7:24.+'
-
-    compile 'com.jakewharton:butterknife:6.1.0'
 
     // Barcode Reader
     //compile 'com.embarkmobile:zxing-android-minimal:2.0.0@aar'
     //compile 'com.embarkmobile:zxing-android-integration:2.0.0@aar'
-    compile 'com.journeyapps:zxing-android-embedded:3.4.0'
-    compile 'com.google.zxing:core:3.3.0'
 
     // Google Playservice
+
+    // Parceler
+
+    // Otto
+
+    // Ok http3.4
+
+    // GSON
+
+    // Service provider retrofit 2.1
+
+    // Background asynchonous task helper
+
+    // Android shadow icon
+    // Graph
+
+    // Firebase
+    compile 'com.android.support:appcompat-v7:25.0.0'
+    compile 'com.android.support:support-v4:25.0.0'
+    compile 'com.android.support:design:25.0.0'
+    compile 'com.android.support:cardview-v7:25.0.0'
+    compile 'com.jakewharton:butterknife:6.1.0'
+    compile 'com.journeyapps:zxing-android-embedded:3.4.0'
+    compile 'com.google.zxing:core:3.3.0'
     compile 'com.google.android.gms:play-services-location:9.6.1'
     compile 'com.google.android.gms:play-services-maps:9.6.1'
     compile 'com.google.android.gms:play-services-ads:9.6.1'
     compile 'com.google.maps.android:android-maps-utils:0.4.+'
-
-    // Parceler
     compile 'org.parceler:parceler-api:1.1.6'
-    annotationProcessor 'org.parceler:parceler:1.1.6'
-
-    // Otto
     compile 'com.squareup:otto:1.3.8'
-
-    // Ok http3.4
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
-
-    // GSON
     compile 'com.google.code.gson:gson:2.3.1'
-
-    // Service provider retrofit 2.1
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-
-    // Background asynchonous task helper
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
-
-    // Android shadow icon
     compile 'com.github.devlight.shadowlayout:library:1.0.2'
-
-    // Graph
     compile 'com.github.PhilJay:MPAndroidChart-Realm:v1.1.0@aar'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.0-beta1'
-
-    // Firebase
     compile 'com.google.firebase:firebase-core:9.6.1'
     compile 'com.google.firebase:firebase-messaging:9.6.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    testCompile 'junit:junit:4.12'
+    annotationProcessor 'org.parceler:parceler:1.1.6'
 }
 apply plugin: 'com.google.gms.google-services'
 //apply plugin: 'com.android.application'
