--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
           android:versionCode="1"
           android:versionName="1.0">
 
-
    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
    <uses-permission android:name="android.permission.CAMERA"/>
@@ -18,8 +17,9 @@
 
    <application
        android:allowBackup="true"
-       android:icon="@mipmap/ic_launcher"
+       android:icon="@drawable/ic_style"
        android:label="@string/app_name"
+       android:logo="@drawable/ic_style"
        android:supportsRtl="true"
        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
       <activity
@@ -29,6 +29,7 @@
           android:windowSoftInputMode="stateHidden|adjustResize">
          <intent-filter>
             <action android:name="android.intent.action.MAIN"/>
+
             <category android:name="android.intent.category.LAUNCHER"/>
          </intent-filter>
       </activity>
@@ -74,10 +75,11 @@
           android:name=".CustomScannerActivity"
           android:screenOrientation="landscape"/>
       <activity android:name=".InvoiceInfoActivity"/>
-      <activity android:name=".AuthenActivity">
-      </activity>
-      <activity android:name=".SignUpActivity">
-      </activity>
+      <activity android:name=".AuthenActivity"/>
+      <activity android:name=".SignUpActivity"/>
+      <activity
+          android:name=".GuideActivity"
+          android:screenOrientation="portrait"/>
    </application>
 
 </manifest>
