7/8/2560 patch 2.0 by atikom

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,8 +21,8 @@ android {
                             '/src/main/res/_A0_location',
                             '/src/main/res/_A0_shop_info',
                             '/src/main/res/_A1_invoice',
+                            '/src/main/res/_A1_bill_list',
                             '/src/main/res/_A0_authen'
-
                     ]
         }
     }
