--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -80,6 +80,8 @@
       <activity
           android:name=".GuideActivity"
           android:screenOrientation="portrait"/>
+      <activity android:name=".BillListActivity">
+      </activity>
    </application>
 
 </manifest>
