8/8/2560 patch 2.0 by atikom

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -82,6 +82,8 @@
           android:screenOrientation="portrait"/>
       <activity android:name=".BillListActivity">
       </activity>
+      <activity android:name=".AppliedSearchActivity">
+      </activity>
    </application>
 
 </manifest>
