--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,16 +90,25 @@ dependencies {
     compile 'com.squareup:otto:1.3.8'
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'com.google.code.gson:gson:2.3.1'
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    //compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'io.reactivex:rxandroid:1.2.1'
+
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
+    //compile 'com.squareup.retrofit2:adapter-rxjava2:latest.version'
+
     compile 'com.github.devlight.shadowlayout:library:1.0.2'
     compile 'com.github.PhilJay:MPAndroidChart-Realm:v1.1.0@aar'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.0-beta1'
     compile 'com.google.firebase:firebase-core:9.6.1'
     compile 'com.google.firebase:firebase-messaging:9.6.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    // Spinner
+    compile 'com.wang.avi:library:2.1.3'
+
     testCompile 'junit:junit:4.12'
     annotationProcessor 'org.parceler:parceler:1.1.6'
 }
