14/09/2560 patch 2.0.1 by atikom

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,10 @@ android {
                             '/src/main/res/_A0_shop_info',
                             '/src/main/res/_A1_invoice',
                             '/src/main/res/_A1_bill_list',
-                            '/src/main/res/_A0_authen'
+                            '/src/main/res/_A0_authen',
+
+
+                            '/src/main/assets/fonts'
                     ]
         }
     }
