--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.0'
+    buildToolsVersion '25.0.2'
 
     defaultConfig {
         applicationId "com.example.administrator.myapplication"
@@ -35,6 +35,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES.txt'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/dependencies.txt'
+        exclude 'META-INF/LGPL2.1'
+    }
 }
 
 repositories {
@@ -56,40 +69,18 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     // Support
 
-    // Barcode Reader
-    //compile 'com.embarkmobile:zxing-android-minimal:2.0.0@aar'
-    //compile 'com.embarkmobile:zxing-android-integration:2.0.0@aar'
-
-    // Google Playservice
-
-    // Parceler
-
-    // Otto
-
-    // Ok http3.4
-
-    // GSON
-
-    // Service provider retrofit 2.1
-
-    // Background asynchonous task helper
-
-    // Android shadow icon
-    // Graph
-
-    // Firebase
-    compile 'com.android.support:appcompat-v7:25.0.0'
-    compile 'com.android.support:support-v4:25.0.0'
-    compile 'com.android.support:design:25.0.0'
-    compile 'com.android.support:cardview-v7:25.0.0'
+    compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.android.support:support-v4:25.2.0'
+    compile 'com.android.support:design:25.2.0'
+    compile 'com.android.support:cardview-v7:25.2.0'
     compile 'com.jakewharton:butterknife:6.1.0'
 
     compile 'com.journeyapps:zxing-android-embedded:3.4.0'
     compile 'com.google.zxing:core:3.3.0'
 
-    compile 'com.google.android.gms:play-services-location:9.6.1'
-    compile 'com.google.android.gms:play-services-maps:9.6.1'
-    compile 'com.google.android.gms:play-services-ads:9.6.1'
+    compile 'com.google.android.gms:play-services-location:11.4.2'
+    compile 'com.google.android.gms:play-services-maps:11.4.2'
+    compile 'com.google.android.gms:play-services-ads:11.4.2'
     compile 'com.google.maps.android:android-maps-utils:0.4.+'
     compile 'org.parceler:parceler-api:1.1.6'
     compile 'com.squareup:otto:1.3.8'
@@ -107,8 +98,9 @@ dependencies {
     compile 'com.github.devlight.shadowlayout:library:1.0.2'
     compile 'com.github.PhilJay:MPAndroidChart-Realm:v1.1.0@aar'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.0-beta1'
-    compile 'com.google.firebase:firebase-core:9.6.1'
-    compile 'com.google.firebase:firebase-messaging:9.6.1'
+    //compile 'com.google.firebase:firebase-core:11.4.2'
+    //compile 'com.google.firebase:firebase-messaging:11.4.2'
+    compile 'com.google.firebase:firebase-messaging:11.4.2'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
     // Spinner
