--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,12 @@
           android:name="com.google.android.geo.API_KEY"
           android:value="@string/google_maps_key"/>
 
+      <meta-data android:name="com.google.firebase.messaging.default_notification_channel_id" android:value="default_channel_id" />
+
+      <meta-data android:name="com.google.firebase.messaging.default_notification_icon" android:resource="@drawable/ic_search" />
+
+      <meta-data android:name="com.google.firebase.messaging.default_notification_color" android:resource="@color/colorAccent" />
+
       <service android:name=".MyFirebaseMessagingService">
          <intent-filter>
             <action android:name="com.google.firebase.MESSAGING_EVENT"/>
