--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,9 +98,12 @@ dependencies {
     compile 'com.github.devlight.shadowlayout:library:1.0.2'
     compile 'com.github.PhilJay:MPAndroidChart-Realm:v1.1.0@aar'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.0-beta1'
-    //compile 'com.google.firebase:firebase-core:11.4.2'
+
+    compile 'com.google.firebase:firebase-core:11.4.2'
     //compile 'com.google.firebase:firebase-messaging:11.4.2'
     compile 'com.google.firebase:firebase-messaging:11.4.2'
+    compile 'com.firebase:firebase-jobdispatcher:0.6.0'
+
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
     // Spinner
